<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_info"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username"
        android:id="@+id/info_username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/stagname"
        android:id="@+id/info_stagname"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_scan"
        android:id="@+id/btn_info_scan"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info_scan_error"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_info_show_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_show_map"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>